<!-- layout/dialog_add_task.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nova Tarefa"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edit_text_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Digite o título da tarefa"
        android:inputType="textCapSentences"/>

</LinearLayout>